[package]
name = "rdmc"
version = "0.1.1"
edition = "2021"
description = "Run commands from you readme as if its a Makefile"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rdmc"

[dependencies]
bpaf = { version = "0.9.9", features = ["autocomplete"] }
markdown = "1.0.0-alpha.16"
